--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="app">
         <h1>Test bucket</h1>
-        <p>Its working! Дугінов Олександр, ІМІм-22-1</p>
+        <p>Its working! Кравченко Олександр, ІМІм-22-1</p>
     </div>
 </body>
 </html>
